--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     datasets: [{
                         label: '리뷰 평점',
                         data: [65, 25, 5, 5],
-                        backgroundColor: ['#81B29A', '#A1C6B3', '#F6C8B4', '#E07A5F'],
+                        backgroundColor: ['#15EB50', '#85EB50', '#FFEB50', '#EB0105'],
                         borderColor: '#F8F7F4',
                         borderWidth: 4,
                         hoverOffset: 8
@@ -336,7 +336,7 @@
                     datasets: [{
                         label: '언급 빈도',
                         data: [85, 60, 65, 95, 90, 100],
-                        backgroundColor: '#81B29A',
+                        backgroundColor: '#15EB50',
                         borderRadius: 8
                     }]
                 },
@@ -360,7 +360,7 @@
                     datasets: [{
                         label: '언급 빈도',
                         data: [40, 55, 60, 70, 75, 90],
-                        backgroundColor: '#E07A5F',
+                        backgroundColor: '#EB0105',
                         borderRadius: 8
                     }]
                 },
